Add cohort API.
